--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -3,7 +3,10 @@
   <div class="product_navigation container-fluid">
     <div class="row">
       <div class=" col-sm-12">
-        <span>Start</span><span>Cosmetic and Beauty</span><span>Sun</span><span>Solar Protection</span>
+        <a href="">Start</a>
+        <a href="">Cosmetic and Beauty</a>
+        <a href="">Sun</a>
+        <a href="">Solar Protection</a>
       </div>
     </div>
   </div>
