--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -35,9 +35,7 @@
 	}
 /* Product Navigation end */
 
-mat-progress-bar{
-	margin-top: -5px;
-}
+
 
 
 /* CheckBox Start */
@@ -81,6 +79,17 @@ mat-progress-bar{
 /* CheckBox end */
 
 /* Controls Section Start */
+	#controlsOuter{
+		background-color: #fff;
+		/* z-index: 1;
+		position: sticky;
+		top: 0; */
+	}
+
+	mat-progress-bar{
+		margin-top: -5px;
+	}
+
 	.list_title_text_controls{
 		display: none;
 		font-size: 2em;
@@ -117,7 +126,8 @@ mat-progress-bar{
 	.controlsContainer{
 		padding: 5px 15px;
 		display: flex;
-	    justify-content: space-between;
+		justify-content: space-between;
+		width: 100%;
 	}
 	.list_controls{
 		margin:auto 0;
@@ -145,7 +155,7 @@ mat-progress-bar{
 			display: inline-block;
 			margin: auto;
 		}
-		.sortFor form select{
+		.sortFor select{
 			border-color: #fbfafa;
 		}
 		.sortFor button{
@@ -198,7 +208,7 @@ mat-progress-bar{
 		.zoomRange #zoomRangeValue{
 			color: #F36438;
 			margin: auto;
-			width: 20px;
+			width: 25px;
 			border:1px solid #fff;
 		}
 		.zoomRange #zoomRangeValue:focus{
