--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -11,73 +11,75 @@
     </div>
   </div>
 
-  <div class="controlsContainer">
-      <div class="list_title">
-        <div class="boxedCheckbox">
-          <input #mc (change)="checkAll(mc)" type="checkbox" name="name" id="checkAll">
-          <label for="checkAll"></label>
+  <div id="controlsOuter">
+    <div class="controlsContainer">
+        <div class="list_title">
+          <div class="boxedCheckbox">
+            <input #mc (change)="checkAll(mc)" type="checkbox" name="name" id="checkAll">
+            <label for="checkAll"></label>
+          </div>
+          <div class="list_title_text">
+            <i class="fa fa-angle-left list_title_text_controls"></i>
+            <div class="list_title_text_inner"><h2>Facial Protection</h2></div>
+            <i class="fa fa-angle-right list_title_text_controls"></i>
+          </div>
         </div>
-        <div class="list_title_text">
-          <i class="fa fa-angle-left list_title_text_controls"></i>
-          <div class="list_title_text_inner"><h2>Facial Protection</h2></div>
-          <i class="fa fa-angle-right list_title_text_controls"></i>
-        </div>
-      </div>
-      <div class="list_controls">
+        <div class="list_controls">
 
-          <div class="sortFor">
-            <span>Sort For</span>
-            <form action="" method="">
+            <div class="sortFor">
+              <span>Sort For</span>
               <select (change)="filterBy($event)">
                 <option value="name">Name</option>
                 <option value="price">Price</option>
               </select>
-              <button type="submit"><i class="fa fa-sort-amount-asc"></i></button>
-            </form>
+              <button><i class="fa fa-sort-amount-asc"></i></button>
 
-          </div>
-          <div class="viewAs">
-            <span>View as</span>
-            <span 
-              [class.active]="view === 'grid'"
-              routerLink="/category/new"
-              [queryParams]="{view: 'grid'}"
-            >
-              <i class="fa fa-th-large" aria-hidden="true"></i>
-            </span>
-            <span 
-              [class.active]="view === 'list'"
-              routerLink="/category/new"
-              [queryParams]="{view: 'list'}"
-            >
-              <i class="fa fa-list" aria-hidden="true"></i>
-            </span>
-          </div>
-          <div class="zoomRange">
-            <input #ri (input)="rangeValueChange(ri)" type="range" id="zoomRangeInput" value="10" min="5" max="20">
-            <!-- <span id="zoomRangeValue">10</span> -->
-            <input #rv (keyup)="rangeValueChange(rv)" type="text" name="zoomRangeValue" id="zoomRangeValue" value="10">
-          </div>
-          <div class="dualPanel">
-            <span>
-              <input checked type="radio" name="dualPanel" value="1" id="singlePanelView">
-              <label for="singlePanelView"><i class="fa fa-bars" aria-hidden="true"></i></label>
-            </span>
-            <span>
-              <input type="radio" name="dualPanel" value="1" id="dualPanelView">
-              <label for="dualPanelView"><i class="fa fa-bars" aria-hidden="true"></i><i class="fa fa-bars" aria-hidden="true"></i></label>
-            </span>
-          </div>
-          <div class="mainCart">
-            <p (click)="mainAddtoCart()"><i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span></p>
-          </div>
-          <img id="toolBox" src="assets/images/brqx_2017_toolbox_128.png" alt="">
-
-      </div>
-
+            </div>
+            <div class="viewAs">
+              <span>View as</span>
+              <span 
+                [class.active]="view === 'grid'"
+                routerLink="/category/new"
+                [queryParams]="{view: 'grid'}"
+              >
+                <i class="fa fa-th-large" aria-hidden="true"></i>
+              </span>
+              <span 
+                [class.active]="view === 'list'"
+                routerLink="/category/new"
+                [queryParams]="{view: 'list'}"
+              >
+                <i class="fa fa-list" aria-hidden="true"></i>
+              </span>
+            </div>
+            <div class="zoomRange">
+              <input (input)="rangeValueChange()" type="range" id="zoomRangeInput" [(ngModel)]="numberOfProducts" min="5" max="{{allProducts?.length}}">
+              <!-- <span id="zoomRangeValue">10</span> -->
+              <input (keyup)="rangeValueChange()" type="text" name="zoomRangeValue" id="zoomRangeValue" [(ngModel)]="numberOfProducts">
+            </div>
+            <div class="dualPanel">
+              <span>
+                <input checked type="radio" name="dualPanel" value="1" id="singlePanelView">
+                <label for="singlePanelView"><i class="fa fa-bars" aria-hidden="true"></i></label>
+              </span>
+              <span>
+                <input type="radio" name="dualPanel" value="1" id="dualPanelView">
+                <label for="dualPanelView"><i class="fa fa-bars" aria-hidden="true"></i><i class="fa fa-bars" aria-hidden="true"></i></label>
+              </span>
+            </div>
+            <div class="mainCart">
+              <p (click)="mainAddtoCart()"><i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span></p>
+            </div>
+            <img id="toolBox" src="assets/images/brqx_2017_toolbox_128.png" alt="">
+        </div>
+        
+    </div>
+    <mat-progress-bar  *ngIf="loaderVisible" mode="indeterminate" color="warn"></mat-progress-bar>
   </div>
 
-  <mat-progress-bar *ngIf="loaderVisible" mode="indeterminate"></mat-progress-bar>
+  
+
+  
 
 
   <div 
