labeled product compononent init

--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -2,7 +2,7 @@
 
   <div class="product_navigation container-fluid">
     <div class="row">
-      <div class=" col-sm-12">
+      <div class="col-sm-12">
         <a href="">Start</a>
         <a href="">Cosmetic and Beauty</a>
         <a href="">Sun</a>
@@ -10,6 +10,8 @@
       </div>
     </div>
   </div>
+
+  <labeled-product></labeled-product>
 
   <div id="controlsOuter">
     <div class="controlsContainer">
