language selector component added

--- a/src/app/p-nav/p-nav.component.html
+++ b/src/app/p-nav/p-nav.component.html
@@ -74,48 +74,7 @@
         </a>
       </li>
       <li id="lang">
-        <ul class="flagsContainer">
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-            </a>
-          </li>
-          <li class="active">
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-            </a>
-          </li>
-        </ul>
+        <language-selector></language-selector>
       </li>
     </ul>
   </div>
