currency module added

--- a/src/app/p-nav/p-nav.component.html
+++ b/src/app/p-nav/p-nav.component.html
@@ -59,10 +59,13 @@
   <div class="nav-right">
     <ul>
       <li>
+        <curency-selector></curency-selector>
+      </li>
+      <!-- <li>
         <a href="#">
           <i class="fa fa-search"></i>
         </a>
-      </li>
+      </li> -->
       <li>
         <a href="#">
           <i class="fa fa-shopping-cart"></i>
