--- a/src/app/curency-selector/curency-selector.component.html
+++ b/src/app/curency-selector/curency-selector.component.html
@@ -1,76 +1,76 @@
 <div id="currency-selector-wrapper">
   <p id="active-currency">
-      $<span>Us Dollar</span>
+    COP
       <i class="fa fa-caret-down"></i>
     </p>
     <div id="all-currency">
-      <i (mouseover)="slideUp(upbtn)" #upbtn class="fa fa-angle-up"></i>
+      <i (mouseleave)="slideStop(upbtn)" (mouseover)="slideUp(upbtn)" #upbtn class="fa fa-angle-up"></i>
       <ul class="currencyContainer sliderContainer">
         
         <li>
           <a href="#">
-            €<span>Euro</span>
+            €<span class="currencyFull">Euro</span>
           </a>
         </li>
         <li>
           <a href="#">
-            $<span>Us Dollar</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            $<span>Peso Argentino</span>
+            $<span class="currencyFull">Us Dollar</span>
           </a>
         </li>
 
         <li>
           <a href="#">
-            A$<span>Australian Dollar</span>
+            $<span class="currencyFull">Peso Argentino</span>
           </a>
         </li>
 
         <li>
           <a href="#">
-            R$<span>Real Brasileiro</span>
+            A$<span class="currencyFull">Australian Dollar</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            R$<span class="currencyFull">Real Brasileiro</span>
           </a>
         </li>
         
         <li>
           <a href="#">
-            C$<span>Canadian Dollar</span>
+            C$<span class="currencyFull">Canadian Dollar</span>
           </a>
         </li>
 
         <li>
           <a href="#">
-            $<span>Peso Chileno</span>
+            $<span class="currencyFull">Peso Chileno</span>
           </a>
         </li>
 
         <li>
           <a href="#">
-            ¥<span>Chinese Yuan</span>
+            ¥<span class="currencyFull">Chinese Yuan</span>
+          </a>
+        </li>
+        <li class="active">
+          <a href="#">
+            COP<span class="currencyFull">Peso Colombiano</span>
           </a>
         </li>
         <li>
           <a href="#">
-            COP<span>Peso Colombiano</span>
+            ¥<span class="currencyFull">Japanese Yen</span>
           </a>
         </li>
         <li>
           <a href="#">
-            ¥<span>Japanese Yen</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            $<span>Peso Mexicano</span>
+            $<span class="currencyFull">Peso Mexicano</span>
           </a>
         </li>
         
       </ul>
-      <i (mouseover)="slideDown(downbtn)" #downbtn class="fa fa-angle-down"></i>
+      <i (mouseleave)="slideStop(downbtn)" (mouseover)="slideDown(downbtn)" #downbtn class="fa fa-angle-down"></i>
     </div>      
 </div>
 
