--- a/src/app/language-selector/language-selector.component.css
+++ b/src/app/language-selector/language-selector.component.css
@@ -77,3 +77,50 @@
     background-color: #ddd;
     color: #F36438;
 }
+
+
+/* 4k */
+@media only screen and (min-width: 2049px) {
+    #all-flags{
+        top: 52px;
+        height: 460px;
+        padding-right: 12px;
+    }
+
+    #all-flags i {
+        font-size: 65px
+    }
+
+    #active-lang img{
+        height: 25px;
+        width: 35px;
+    }
+}
+
+@media only screen and (max-width: 1700px) {
+    #active-flag span{
+        display: none;
+    }
+    
+}
+
+/* tablet */
+@media only screen and (max-width:1024px) {
+    #active-lang img{
+        
+    }
+    #active-lang span, #all-flags ul li a span{
+        display: none;
+    }
+}
+
+/* mobile */
+@media only screen and (max-width: 767px){
+    #flag-selector-wrapper{
+        padding: 2px 5px 5px 5px;
+    }
+    .flagsContainer img {
+        width: 30px;
+        height: 20px;
+    }
+}
