--- a/src/app/curency-selector/curency-selector.component.css
+++ b/src/app/curency-selector/curency-selector.component.css
@@ -66,6 +66,7 @@
 .currencyContainer li:hover a, .currencyContainer li.active a{
     background-color: #ddd;
     color: #F36438;
+    cursor: pointer;
 }
 
 
