--- a/src/app/language-selector/language-selector.component.html
+++ b/src/app/language-selector/language-selector.component.html
@@ -1,68 +1,20 @@
 <div id="flag-selector-wrapper">
     <p id="active-lang">
-        <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-        <span>Australia</span>
+        <img src="{{activeLanguage.flag}}" alt="">
+        <span>{{activeLanguage.name}}</span>
         <i class="fa fa-caret-down"></i>
       </p>
       <div id="all-flags">
-        <i (mouseover)="slideUp(upbtn)" #upbtn class="fa fa-angle-up"></i>
+        <i (mouseover)="slideUp(upbtn)" (mouseleave)="slideStop(upbtn)" #upbtn class="fa fa-angle-up"></i>
         <ul class="flagsContainer sliderContainer">
           
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-              <span>Spain</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-              <span>Spain</span>
-            </a>
-          </li>
-          <li class="active">
-              <a href="#">
-                <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-                <span>Australia</span>
-              </a>
-            </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-              <span>Spain</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-              <span>Spain</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-              <span>Spain</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-              <span>Spain</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-              <span>Spain</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt="">
-              <span>Spain</span>
+          <li *ngFor="let language of allLanguage" [class.active]="language.active" (click)="changeLanguage(language)">
+            <a>
+              <img src="{{language.flag}}" alt="{{language.name}}">
+              <span>{{language.name}}</span>
             </a>
           </li>
         </ul>
-        <i (mouseover)="slideDown(downbtn)" #downbtn class="fa fa-angle-down"></i>
+        <i (mouseover)="slideDown(downbtn)" (mouseleave)="slideStop(downbtn)" #downbtn class="fa fa-angle-down"></i>
       </div>      
 </div>
