--- a/src/app/language-selector/language-selector.component.html
+++ b/src/app/language-selector/language-selector.component.html
@@ -1,7 +1,7 @@
 <div id="flag-selector-wrapper">
     <p id="active-lang">
-        <img src="{{activeLanguage.flag}}" alt="">
-        <span>{{activeLanguage.name}}</span>
+        <img src="{{activeLanguage?.flag}}" alt="">
+        <span>{{activeLanguage?.name}}</span>
         <i class="fa fa-caret-down"></i>
       </p>
       <div id="all-flags">
