cart and user dropDown menu finished

--- a/src/app/p-nav/p-nav.component.html
+++ b/src/app/p-nav/p-nav.component.html
@@ -67,14 +67,10 @@
         </a>
       </li> -->
       <li>
-        <a href="#">
-          <i class="fa fa-shopping-cart"></i>
-        </a>
+        <app-cart-drop-down></app-cart-drop-down>
       </li>
       <li>
-        <a href="#">
-          <i class="fa fa-user"></i>
-        </a>
+        <user-drop-down></user-drop-down>
       </li>
       <li id="lang">
         <language-selector></language-selector>
