--- a/src/app/user-drop-down/user-drop-down.component.html
+++ b/src/app/user-drop-down/user-drop-down.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper">
   <p id="activateIcon">
-    <i class="fa fa-shopping-cart"></i>
+    <i class="fa fa-user"></i>
   </p>
 
   <div id="all-options">
@@ -9,16 +9,16 @@
 
       <li>
         <a>
-          Show
+          Login
           <!-- <span class="currencyFull">{{currency?.full}}</span> -->
         </a>
       </li>
 
       <li>
-        <a href="">Save</a>
+        <a href="">Register</a>
       </li>
       <li>
-        <a href="">Empty</a>
+        <a href="">Option3</a>
       </li>
 
     </ul>
